--- a/src/components/layout/Container.module.css
+++ b/src/components/layout/Container.module.css
@@ -4,14 +4,17 @@
   height: 656px;
   align-items: center; /*centraliza horizontalmente*/
   justify-content: center; /*cetraliza verticalmente*/
-  
+  gap: 80px;
 
+}
+
+.text {
+  color: white;
 }
 
 .imgs {
   position: relative;
-  padding: 50px;
-  
+  padding: 20px 40px 40px 40px; 
   align-items: center;
   justify-content: center;
 }
